# competitive-programming-toolkit

./: .isort.cfg  .pre-commit-config.yaml  README.md  app.py  cptool.py  install.sh  pyproject.toml  setup.cfg  setup.py
cptool/: __init__.py  cli.py  cptool.py  version.py
cptool/commands/: __init__.py  base.py  check.py  compile.py  diff.py  new.py  scrap.py  scrape.py  test.py  testgen.py
cptool/controllers/: __init__.py  compile.py  diff.py  new.py  test.py  testgen.py
cptool/errors/: command_not_found.py  error.py
cptool/helpers/: __init__.py  colorize.py  compiler.py  config.py  env.py  errors.py  testfmt.py
cptool/helpers/b/: README.md
cptool/languages/: __init__.py  base.py  cpp.py  get_lang.py  languages.py  python.py  rust.py
cptool/scrapers/: __init__.py  codechef.py  scraper.py
cptool/templates/: __init__.py  problem_yaml.py  problem_yaml_generator.py  template.py
cptool/utils/: __init__.py  console_io.py  diff.py  errors.py  rand.py  test_case.py  yaml_file.py
cptool/yaml/: __init__.py  default.py  problem_yaml.py  problem_yaml_validator.py  validator.py  yaml_file.py
src/: compiler.py  config.py  create.py  diff.py  test.py  testgen.py  utils.py
template/: .gitignore
template/logic/: logic.py
template/testgen/: generator.py
tests/: test_cptool.py  test_version.py
tests/commands/: test_check.py  test_new.py  test_testgen.py
tests/languages/: test_base.py  test_cpp.py  test_get_lang.py  test_python.py  test_rust.py
tests/scrapers/: test_codechef.py
tests/scrapers/fixtures/: FLOW007.html  SEABIL.html  TEST.html  retrieve.html  retrieve_Multiple.html
tests/templates/: test_problem_yaml_generator.py  test_template.py
tests/utils/: test_rand.py  test_yaml_file.py
tests/yaml/: formatted_problem.yaml  raw_problem.yaml  test.yaml  test_problem_yaml.py  test_problem_yaml_validator.py  test_validator.py  test_yaml_file.py
tests/yaml/fixtures/: formatted_problem.yaml  problem.yaml  problem_formatted.yaml  (+16 more)
(+18 files in other folders)
