[tool.poetry]
name = "cptool"
version = "0.1.0"
description = ""
authors = ["Tho Nguyen"]

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.3.1"
beautifulsoup4 = "^4.9.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-docstrings = "*"
flake8-rst-docstrings = "*"
pylint = "*"
black = "==19.10b0"
pre-commit = "*"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
