[tool.poetry]
name = "cptool"
version = "0.2.0"
description = "A simple toolkit for Competitive Programming."
authors = ["Tho Nguyen"]

[tool.poetry.dependencies]
python = "^3.6.1"
beautifulsoup4 = "^4.9.0"
"ruamel.yaml" = "^0.16.10"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
flake8 = "^3.8.1"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.13"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.2.2"
flake8-bugbear = "^20.1.4"
flake8-eradicate = "^0.3.0"
flake8-bandit = "^2.1.2"
flake8-pytest-style = "^1.1.1"
flake8-import-order = "^0.18.1"
pylint = "^2.5.2"
darglint = "^1.3.0"
isort = "^4.3.21"
mypy = "^0.770"
black = "^19.10b0"
pre-commit = "^2.4.0"
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"

[tool.poetry.scripts]
cptool = "cptool:run_main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
